--- a/src/App.css
+++ b/src/App.css
@@ -109,6 +109,7 @@
   box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
   border-radius: 30px;
   height: 150px;
+  margin-top: 20px;
 }
 
 .headerList {
@@ -125,6 +126,12 @@
   border-radius: 20px !important;
   border: 2px solid #bc4e9c !important;
   background-color: rgb(33,37,41);
+}
+
+.form-check-input:focus {
+  border: 2px solid #bc4e9c !important;
+  outline: 0;
+  box-shadow: none;
 }
 
 .form-check-input:checked {
@@ -223,19 +230,9 @@
 }
 
 .text-height {
-  width: 100%;
-  height: 60px;
-  overflow: scroll;
-  overflow-x: hidden;
-  mask-image: linear-gradient(to top, transparent, black),
-    linear-gradient(to left, transparent 17px, black 17px);
-  mask-size: 100% 20000px;
-  mask-position: left bottom;
-  -webkit-mask-image: linear-gradient(to top, transparent, black),
-    linear-gradient(to left, transparent 17px, black 17px);
-  -webkit-mask-size: 100% 20000px;
-  -webkit-mask-position: left bottom;
-  transition: mask-position 0.3s, -webkit-mask-position 0.3s;
+  width:100%;
+  height: 55px;
+  overflow: hidden;
 }
 
 .input-main {
@@ -258,6 +255,16 @@
   color: #bc4e9c;
 }
 
+.btn-defult-color{
+  background: #bc4e9c;
+  color: #fff;
+}
+
+.btn-defult-color:hover{
+  background: #bc4e9d83;
+  color: #fff;
+}
+
 .from-field {
   width: 100%;
 }
@@ -270,6 +277,24 @@
   border: none;
   color: #fff;
   width: 100%;
+}
+
+.form-control:focus {
+  color: #fff;
+  background-color: transparent;
+  border: 1px solid #505050 !important;
+  outline: 0;
+  box-shadow: none;
+}
+
+.edit_input_field {
+  outline: none;
+  background: transparent;
+  border: none;
+  color: #fff;
+  width: 100%;
+  height: 200px !important;
+  border: 1px solid #505050 !important;
 }
 
 @media only screen and (max-width: 600px) {
