--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,13 @@
   z-index: 10;
 }
 
+.side-bar-title {
+  height: 100px;
+  display: flex;
+  align-items: center;
+  padding: 0px 0px 0px 16px;
+}
+
 .outlet-style {
   width: 100%;
 }
@@ -15,17 +22,14 @@
 .sidebarmenu {
   width: 330px !important;
   height: 100vh;
-  display: flex;
-  justify-content: center;
   top: 0;
   left: 0;
+  transition: 350ms;
 }
 
 .sidebarmenu1 {
   width: 100px !important;
   height: 100vh;
-  display: flex;
-  justify-content: center;
   top: 0;
   left: 0;
   transition: 350ms;
@@ -49,13 +53,19 @@
 
 .side-nav-active1 {
   background: rgb(49, 54, 59);
-  padding: 22px;
+  padding: 30px;
   width: 100%;
 }
 
 .side-nav-item1 {
-  padding: 22px;
+  padding: 30px;
   width: 100%;
+}
+
+.sidebar-icon {
+  font-size: 25px;
+  padding: 10px;
+  border-radius: 10px;
 }
 
 .side-nav-item1:hover {
@@ -65,9 +75,7 @@
 
 .active-header {
   background: rgb(49, 54, 59);
-  padding: 5px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 10px;
   border-radius: 10px;
 }
 
@@ -81,7 +89,7 @@
   float: right;
   box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
   border: none;
-  background: rgb(33,37,41);
+  background: rgb(33, 37, 41);
   color: #fff;
 }
 
@@ -104,7 +112,7 @@
 
 .card-style {
   padding: 25px;
-  background: rgb(33,37,41);
+  background: rgb(33, 37, 41);
   color: #fff;
   box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
   border-radius: 30px;
@@ -125,7 +133,7 @@
   margin-top: 0.25em !important;
   border-radius: 20px !important;
   border: 2px solid #bc4e9c !important;
-  background-color: rgb(33,37,41);
+  background-color: rgb(33, 37, 41);
 }
 
 .form-check-input:focus {
@@ -230,22 +238,22 @@
 }
 
 .text-height {
-  width:100%;
+  width: 100%;
   height: 55px;
   overflow: hidden;
 }
 
 .input-main {
-  background: rgb(33,37,41);
+  background: rgb(33, 37, 41);
   width: 65%;
   height: 80px;
   padding: 5px;
   border-radius: 20px;
-  background: rgb(33,37,41);
+  background: rgb(33, 37, 41);
 }
 
 .input-container {
-  padding:15px;
+  padding: 15px;
   background: #15171c;
   display: flex;
   border-radius: 10px;
@@ -255,12 +263,16 @@
   color: #bc4e9c;
 }
 
-.btn-defult-color{
+.text-pink {
+  color: #bc4e9c;
+}
+
+.btn-defult-color {
   background: #bc4e9c;
   color: #fff;
 }
 
-.btn-defult-color:hover{
+.btn-defult-color:hover {
   background: #bc4e9d83;
   color: #fff;
 }
@@ -293,10 +305,16 @@
   border: none;
   color: #fff;
   width: 100%;
-  height: 200px !important;
   border: 1px solid #505050 !important;
 }
 
+.font-style {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+  font-size: 15px !important;
+}
 @media only screen and (max-width: 600px) {
   .header-hidden {
     display: none !important;
