--- a/src/App.css
+++ b/src/App.css
@@ -116,7 +116,7 @@
   color: #fff;
   box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
   border-radius: 30px;
-  height: 150px;
+  height: 130px;
   margin-top: 20px;
 }
 
@@ -134,6 +134,7 @@
   border-radius: 20px !important;
   border: 2px solid #bc4e9c !important;
   background-color: rgb(33, 37, 41);
+  cursor: pointer;
 }
 
 .form-check-input:focus {
@@ -310,7 +311,7 @@
 
 .font-style {
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 2;
   overflow: hidden;
   -webkit-box-orient: vertical;
   font-size: 15px !important;
